src/test/deca/syntax/invalid/without_class/two_mains.deca
/// Description:
// 	  Test of an error : cannot define two mains in the same program file
// 
//  Resultats:
//    Syntax Error
//    line 11
{ 
    //first main = empty main
}

{
    int a = 0; //second main
}